Set default value for AZURE_LOCATION in CI/CD workflow

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -47,7 +47,7 @@ env:
   AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
   AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
   AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-  AZURE_LOCATION: ${{ inputs.AZURE_LOCATION }}
+  AZURE_LOCATION: ${{ inputs.AZURE_LOCATION || 'westus3' }}
   PYTHONIOENCODING: utf-8
   
 jobs:
