--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -163,6 +163,9 @@ jobs:
           tenant-id: ${{ env.AZURE_TENANT_ID }}
           subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Install azd
+        uses: Azure/setup-azd@v2
+
       - name: Azure Developer CLI login
         shell: bash
         run: |
